fix overflow scroll

--- a/src/pages/home-page/components/checkout-card-component/checkout-card-component.scss
+++ b/src/pages/home-page/components/checkout-card-component/checkout-card-component.scss
@@ -6,7 +6,7 @@
   max-width: 375px;
   min-height: 100vh;
   padding: 40px 24px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   & &__title-container {
     margin-bottom: 48px;
